Fix wrapping, improve OUTPUT matching in CodeBlock
Former-commit-id: 16594d03e537d85fbc31cdf625538664dd3bc10a

--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -418,4 +418,4 @@ $standard-colors: map-remove($colors, "white", "gray", "gray-dark" );
 .br-br-0 { border-bottom-right-radius: 0 !important; }
 
 // whitespace
-.ws-preline { white-space: pre-line !important; }
+.ws-prewrap { white-space: pre-wrap !important; }
